--- a/templates/post/form.html.twig
+++ b/templates/post/form.html.twig
@@ -1,6 +1,52 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('pages/post') }}
+{% endblock %}
+
 {% block body %}
-    {{ form_start(form) }}
-    {{ form_end(form) }}
+    <div class="py-5 text-center">
+        <img class="d-block mx-auto mb-4" src="{{ asset('assets/brand/bootstrap-logo.svg') }}" alt="" width="72" height="57">
+        <h2>Create post</h2>
+    </div>
+
+    <div class="row g-5 justify-content-center">
+        <div class="col-md-6 col-lg-6">
+            {{ include('components/_alert.html.twig') }}
+
+            {{ form_start(form) }}
+                <div class="row g-3">
+                    <div class="col-sm-12">
+                        {{ form_row(form.title) }}
+                    </div>
+                    <div class="col-sm-12">
+                        {{ form_row(form.content) }}
+                    </div>
+
+                    <div class="col-sm-12">
+                        <label for="lastName" class="form-label">Published at</label>
+                        <div class="row g3">
+                            <div class="col-sm-6">
+                                {{ form_row(form.publishedAt.date) }}
+                            </div>
+                            <div class="col-sm-6">
+                                {{ form_row(form.publishedAt.time) }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <hr class="my-4">
+
+                {{ form_row(form.save) }}
+
+            {{ form_end(form) }}
+        </div>
+    </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('pages/post') }}
 {% endblock %}
