test: Create post

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,8 +7,9 @@
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.84.0">
     <title>
+        Symfony Hexagonal Architecture -
         {% block title %}
-            Symfony hexagonal architecture
+            Base
         {% endblock %}
     </title>
 
